ApiB/kubernetes/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-b-selvin-ingress
  namespace: capacitaciones
spec:
  entryPoints:
  - websecure
  #- websecurepublic
  - web
  routes:
  - kind: Rule
    match: Host(`apps.k8s-dev.grupofarsiman.io`) && PathPrefix(`/corporativo/it/api-b-selvin`)
    middlewares:
    - name: api-b-selvin-ingress-path-strip
    services:
    - name: corporativo-it-api-b-selvin-svc
      port: 80
  tls:
    secretName: tls-k8s-grupofarsiman-io
